<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.NoteActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Note_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">


        <ImageView
            android:id="@+id/Note_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_gravity="start"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/ic_back" />



        <TextView
            android:id="@+id/Note_Image_Save_As"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:text="@string/app_name"
            android:textSize="@dimen/_19ssp" />


    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/note_Title"
        android:padding="@dimen/_3sdp"
        android:textSize="@dimen/_18ssp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Note_Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/note_Choose_color"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"


        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Note_color_orange"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_orange"
                android:src="@drawable/ic_baseline"
                />

            <ImageView
                android:id="@+id/Note_color_green"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_green" />

            <ImageView
                android:id="@+id/Note_color_yellow"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_yellow"
                />

            <ImageView
                android:id="@+id/Note_color_red"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_red" />

            <ImageView
                android:id="@+id/Note_color_blue"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_blue" />

            <ImageView
                android:id="@+id/Note_color_purple"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_purple" />

            <ImageView
                android:id="@+id/Note_color_gray"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_gray" />
            <ImageView
                android:id="@+id/Note_color_blueLight"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/choose_color_bluelight" />
            <ImageView
                android:id="@+id/Note_color_PurpleLight"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/choose_color_purplelight" />

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/Note_Layout_Voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/voice_shape"

        android:orientation="horizontal"

        android:padding="@dimen/_8sdp"

        >

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_play"


            />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0:00"
            android:textSize="@dimen/_13ssp"

            />

        <ImageView
            android:id="@+id/Note_deletRecord"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_delete_30" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/note_Note"
        android:padding="@dimen/_3sdp"
        android:textSize="@dimen/_18ssp"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Note_Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="5"
            android:scrollbarStyle="insideInset"
            android:textSize="@dimen/_15ssp"
            android:textStyle="normal"


            />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/Note_LayoutRecordView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="horizontal"


        >

        <com.devlomi.record_view.RecordView
            android:id="@+id/record_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            app:counter_time_color="#ff0000"
            app:slide_to_cancel_arrow="@drawable/recv_ic_arrow"
            app:slide_to_cancel_arrow_color="@android:color/black"
            app:slide_to_cancel_margin_right="@dimen/_15sdp"
            app:slide_to_cancel_text="Slide To Cancel" />


        <com.devlomi.record_view.RecordButton
            android:id="@+id/NoteRecord_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@drawable/recv_bg_mic"
            android:padding="@dimen/_12sdp"
            android:scaleType="centerInside"
            android:tint="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="#DFA295"
            app:mic_icon="@drawable/recv_ic_mic" />


    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            app:tint="@color/white"
            android:src="@drawable/ic_added_30"
            android:layout_marginTop="@dimen/_5sdp"
            app:backgroundTint="#DFA295"
            app:elevation="6dp"

            />



    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>
